Introduce SubjectProviderOptions and associate it with MeasureEvaluationOptions.  Use conditional logic in R4RepositorySubjectProvider to choose whether to perform a chained partOf query.